--- a/butterworth/makefile
+++ b/butterworth/makefile
@@ -2,7 +2,7 @@
 
 FC      = gfortran
 FFLAGS  = -g -Wall -Wextra -Warray-temporaries -Wconversion -fimplicit-none -fbacktrace -ffree-line-length-0
-OBJS0    = module.f90 others.f90 Butterworth.f90
+OBJS0    = module.f90 sgt.f90 others.f90 Butterworth.f90
 program0=MarsInversion
 #program1=tipsvSingle
 
